src/styles/App.scss
/* ... */
.projectInfoContainer {
  width: 680px;

  @media (width <=990px) {
    width: 290px;
  }
}

.projectTitle {
  // font-family: l.$font-1;
  font-family: 'Axiforma';
  color: l.$color-6;
  font-size: 48px;
  font-weight: 500;
  line-height: 54px;
  text-align: center;

  @media (width <=990px) {
    font-size: 32px;
    line-height: 38px;
  }
}

.knowSomeButtonContainer {
  padding: 0 300px 0 300px;
  margin: 80px 0 26px 0;
  align-self: flex-start;

  @media (width <=990px) {
    margin: 60px 0 25px 0;
    padding: 0;
    display: flex;
    justify-content: center;
  }
}

.knowSomeButton {
  display: flex;
  align-items: center;
  align-content: center;
  gap: 5px;
  color: l.$color-6;
  @include secondary-font-semibold;
}

.galleryImage {
  width: 100%;
}

.arrowDownImage {
  align-self: flex-start;
}

.slide-content {
  position: relative;
}

.triangle-topright {
  position: absolute;
  top: 0;
  right: 0;
  width: 0;
  height: 0;
  border-top: 100px solid white;
  border-left: 100px solid transparent;
}

.swiper-pagination-bullet-active {
  background: white;
}

/******************************End Project_Section******************************/
/******************************Start Partner_Section******************************/
.partnerSection {
  width: l.$w-100;

  @media (width <=990px) {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 60px;
  }
}

.partnerMainContainer {
  display: flex;
  flex-direction: column;
  padding: 60px;

  @media (width <=990px) {
    padding: 0;
    margin: 15px 0 15px 0;
  }
}

.partnerTitleContainer {
  padding-left: 60px;
  width: 750px;

  @media (width <=990px) {
    width: 280px;
    padding-left: 0;
  }

  .partnerTitle {
    font-size: 48px;
    font-weight: 500;
    line-height: 54px;
    color: l.$color-6;
    margin-bottom: 4rem;
    @include primary-font-medium;

    @media (width <=990px) {
      font-size: 32px;
      line-height: 38px;
    }
  }
}

.slide-Partner-content {
  height: 100%;
  display: flex;
  justify-content: center;

  .slide-Partner-image {
    height: fit-content;
    align-self: center;
  }
}

.partnerContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 10px;

  @media (width <=990px) {
    // flex-direction: column;
  }
}

.partnerProjectDescription {
  width: 33.3%;

  p {
    width: 100%;
    text-align: justify;
    @media (width <=990px) {
      width: 100%;
      font-size: 14px;
    }
  }
} 


.partnerDescriptionContainer {
  display: flex;
  justify-content: space-between;
  margin-bottom: 2rem;

  @media (width <=990px) {
    gap: 10px;
    flex-direction: column;
  }
}

.partnerProjectInfoClients {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
  padding: 0;
}

.partnerProjectInfoClients.open {
  max-height: 500px;
}

.partnerFieldTitle {
  border-bottom: 1px solid #5B5A59;
  font-size: 16px;
  line-height: 20px;
  text-transform: uppercase;
  color: l.$color-6;
  @include secondary-font-semibold;

  @media (width <=990px) {
    font-size: 12px;
    line-height: 14px;
  }
}


 .swiper-slide .slide-content img {
  width: auto;
  height: 100%;
  max-height: 400px;
  object-fit: fill;
}



.partnerProjectName:hover {
  color: l.$color-6;
}

.partnerProjectName {
  font-size: 28px;
  line-height: 38px;
  text-align: left;
  color: l.$color-9;
  @include primary-font-semibold;

  @media (width <=990px) {
    font-size: 14px;
    line-height: 19px;
    color: l.$color-6;
  }

  .partnerPorjectLocation {
    font-size: 16px;
    line-height: 18px;
    text-align: left;
    @include secondary-font-light;

    @media (width <=990px) {
      font-size: 14px;
      line-height: 16px;
    }
  }
}

.partnerLogoContainer {
  // width: 30%;
  display: flex;
  justify-content: center;

  .partnerLogo {
    width: 300px;
    height: 80px;

    @media (width <=990px) {
      width: 130px;
    }
  }

  .partnerLogoIcafal {
    width: 300px;
    height: 80px;

    @media (width <=990px) {
      width: 90px;
    }
  }
}

.partnerLogoContainerAlt {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;

  @media (width <=990px) {}

  .partnerLogo {
    width: 300px;
    height: 80px;
    align-self: flex-start;

    @media (width <=990px) {
      width: 130px;
      height: 50px;
    }
  }

  h3 {
    font-size: 16px;
    line-height: 18px;
    margin-bottom: 0;
    align-self: flex-start;
    @include secondary-font-light;

    @media (width <=990px) {
      margin-top: 0;
      margin-bottom: 10px;
    }
  }
}


.partnerInfoContainer {
  width: 100%;

  @media (width <=990px) {
    margin-bottom: 20px;
  }
}

.partnerProjectDate {
  font-size: 24px;
  font-weight: 500;
  line-height: 39px;
  text-align: left;

  @media (width <=990px) {
    font-size: 16px;
  }
}

.clientContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;

  @media (width <=990px) {}

  .partnerLogo {
    width: 160px;
  }
}

.partnerMainContainer {
  position: relative;
}

.obra-section {
  opacity: 0;
  visibility: hidden;
  transform: translateY(20px);
  transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.5s ease;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;

  @media (width <=990px) {
    width: 90vw;
  }
}

.obra-section.active {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  position: relative;
}

.partnerProjectInfoClients {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s ease;

  @media (width <=990px) {
    min-height: 0;
    transition: min-height 0.5s ease;
  }
}

.clientProjectContainer {
  max-width: 500px;
  max-height: 250px;
}

.clientProject {
  width: auto;
  height: 100%;
  max-height: 400px;
  object-fit: fill;
}
/* ... */

